# tachikoma

./: .editorconfig  .gitignore  .travis.yml  FEATURES.md  README.md  build.gradle  build.gradle.kts  docker.gradle  gradle.properties  java.gradle  kotlin.gradle  server.cert  server.key  settings.gradle  settings.gradle.kts  setuprelease.gradle  tachikoma.properties
.circleci/: config.yml
buildSrc/: build.gradle.kts
contrib/: create_dkim.sh  protoc_install.go
database-docker/: Dockerfile
jersey-uri-builder/: build.gradle.kts
kubernetes/: Kubernetes.md  README.md  deployment-webserver.yaml  issuer.yaml  tachikoma.properties
tachikoma-backend-api/: build.gradle
tachikoma-backend-api-proto/: build.gradle  build.gradle.kts
tachikoma-cli/: .gitignore  go.sum  gow  main.go
tachikoma-common/: build.gradle  build.gradle.kts
tachikoma-database/: build.gradle  build.gradle.kts
tachikoma-database-api/: build.gradle  build.gradle.kts
tachikoma-frontend/: .gitignore  build.gradle  build.gradle.kts
tachikoma-frontend-api-graphql/: build.gradle.kts
tachikoma-frontend-api-proto/: build.gradle  build.gradle.kts
tachikoma-grpc/: build.gradle  build.gradle.kts
tachikoma-grpc-backend/: build.gradle
tachikoma-internal-api/: build.gradle  build.gradle.kts
tachikoma-internal-proto-jvm/: build.gradle  build.gradle.kts
tachikoma-it/: build.gradle  build.gradle.kts
tachikoma-kubernetes/: deployment-webserver.yaml  pod-webserver.yaml  secret.yaml  tachikoma.properties
tachikoma-mq/: build.gradle  build.gradle.kts
tachikoma-postfix-binaries/: Cargo.toml  build.gradle  build.rs
tachikoma-postfix-binaries/src/: mailer.rs  tracer.rs
tachikoma-postfix-binaries/src/common/: mod.rs  setup_grpc.rs
tachikoma-postfix-docker/: Dockerfile  build.gradle  build.gradle.kts
tachikoma-postfix-mailer/: .gitignore  Cargo.toml  build.gradle  build.rs
tachikoma-postfix-node/: .gitignore  build.gradle  package-lock.json  package.json  tsconfig.json
tachikoma-postfix-tracer/: .gitignore  Cargo.toml  build.gradle  build.rs
tachikoma-postfix-tracer/src/: main.rs
tachikoma-postfix-utils/: build.gradle  build.gradle.kts
tachikoma-postfix-utils-2/: go.mod  go.sum
tachikoma-protobuf-annotations/: build.gradle  build.gradle.kts
tachikoma-rest/: build.gradle  build.gradle.kts
tachikoma-startup/: build.gradle  build.gradle.kts
(+556 files in other folders)
