[package]
name = "tachikoma_postfix_binaries"
version = "0.0.1-SNAPSHOT"
license = "Apache-2.0"
description = "Binaries for hooking up postfix with tachikoma"
repository = "https://github.com/SourceForgery/tachikoma/"
readme = "../README.md"
authors = ["Tobias <tobias@olsson.be>"]

[dependencies]
unix_socket         = "0.5.0"

grpc                = "0.2.1"
protobuf            = "1.4.3"
futures             = "0.1"
futures-cpupool     = "0.1"
tls-api             = "0.*"
url                 = "1.6.0"
tls-api-rustls      = "0.1.12"
lettre              = "0.7"

[build-dependencies]
protoc-rust-grpc    = "0.2.1"
glob                = "0.2.11"
tempdir             = "0.3.5"
rust-ini            = "0.9"

[[bin]]
# Handle sending and receiving emails
path = "src/mailer.rs"
name = "tachikoma_mailer"

[[bin]]
# Replaces the tracer socket in postfix and send those messages to tachikoma
path = "src/tracer.rs"
name = "tachikoma_tracer"
