[package]
name = "tachikoma_postfix_tracer"
version = "0.0.1-SNAPSHOT"
license = "Apache-2.0"
description = "Replaces the tracer socket in postfix and send those messages to tachikoma"
repository = "https://github.com/SourceForgery/tachikoma/tree/master/tachikoma-postfix-tracer"
readme = "../README.md"
authors = ["Tobias <tobias@olsson.be>"]

[dependencies]
unix_socket     = "0.5.0"

grpc            = "0.*"
protobuf        = "1.*"
futures         = "0.1"
futures-cpupool = "0.1"