[package]
name = "tachikoma_postfix_tracer"
version = "0.0.1-SNAPSHOT"
license = "Apache-2.0"
description = "Replaces the tracer socket in postfix and send those messages to tachikoma"
repository = "https://github.com/SourceForgery/tachikoma/tree/master/tachikoma-postfix-tracer"
readme = "../README.md"
authors = ["Tobias <tobias@olsson.be>"]

[dependencies]
unix_socket         = "0.5.0"

grpc                = "0.2.1"
protobuf            = "1.4.3"
futures             = "0.1"
futures-cpupool     = "0.1"
tls-api             = "0.*"
url                 = "1.6.0"

[build-dependencies]
protoc-rust-grpc    = "0.2.1"
glob                = "0.2.11"
tempdir             = "0.3.5"

[[bin]]
path = "src/main.rs"
name = "tachikoma_tracer"
